--- a/TEST/Makefile
+++ b/TEST/Makefile
@@ -1,22 +1,21 @@
 
 
-PATSHOMEQ="$(PATSHOME)"
-PATSCONTRIBQ="$(PATSCONTRIB)"
+TEMPHOMEQ="$(TEMPTORY)"
 
 RMF=rm -f
 
-PATSCC=$(PATSHOMEQ)/bin/patscc
+TEMPCC=$(TEMPHOMEQ)/bin/tempacc
 
-PATSFLAGS=-DATS_MEMALLOC_LIBC
+TEMPFLAGS=-DATS_MEMALLOC_LIBC
 CFLAGS=-O2 -D_SPSC_STDATOMIC
 LFLAGS=-lpthread
 
 all:: test01
-test01: test01.dats ; $(PATSCC) $(PATSFLAGS) $(CFLAGS) -o $@ $< $(LFLAGS) 
+test01: test01.dats ; $(TEMPCC) $(TEMPFLAGS) $(CFLAGS) -o $@ $< $(LFLAGS) 
 cleanall:: ; $(RMF) test01
 
 all:: test02
-test02: test02.dats ; $(PATSCC) $(PATSFLAGS) $(CFLAGS) -o $@ $< $(LFLAGS) 
+test02: test02.dats ; $(TEMPCC) $(TEMPFLAGS) $(CFLAGS) -o $@ $< $(LFLAGS) 
 cleanall:: ; $(RMF) test02
 
 cleanall:: ; $(RMF) *_*ats.c
