--- a/TEST/Makefile
+++ b/TEST/Makefile
@@ -8,7 +8,7 @@ RMF=rm -f
 PATSCC=$(PATSHOMEQ)/bin/patscc
 
 PATSFLAGS=-DATS_MEMALLOC_LIBC
-CFLAGS=-O2 -D_SPSC_SYNC_BUILTIN
+CFLAGS=-O2 -D_SPSC_STDATOMIC
 LFLAGS=-lpthread
 
 all:: test01
